<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="inprespfm.application_bateaux.GetContainers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtviewDestinationget"
        android:id="@+id/R_txtvDestination"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtviewOrdre"
        android:id="@+id/R_txtvOrdre"
        android:layout_below="@+id/R_etxtDestination"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/R_SpnrOrdre"
        android:layout_alignBaseline="@+id/R_txtvOrdre"
        android:layout_alignBottom="@+id/R_txtvOrdre"
        android:layout_toEndOf="@+id/R_txtvOrdre" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/R_etxtDestination"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/R_txtvDestination"
        android:layout_marginStart="17dp"
        android:layout_marginTop="34dp"
        android:text="Paris" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnValider"
        android:id="@+id/R_btnValider"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/R_SpnrOrdre" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/R_lstContainers"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/R_btnValider"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTerminer"
        android:id="@+id/R_btnTerminer"
        android:layout_above="@+id/R_lstContainers"
        android:layout_alignEnd="@+id/R_etxtDestination"
        android:layout_marginEnd="14dp" />
</RelativeLayout>
