<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Connexion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtviewLogin"
        android:id="@+id/R_txtvLogin"
        android:layout_alignBaseline="@+id/R_etxtLogin"
        android:layout_alignBottom="@+id/R_etxtLogin"
        android:layout_alignStart="@+id/R_txtvPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txtviewPwd"
        android:id="@+id/R_txtvPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/R_etxtLogin"
        android:layout_marginBottom="41dp"
        android:text="guissaju"
        android:layout_above="@+id/R_etxtPassword"
        android:layout_alignStart="@+id/R_btnConnexion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/R_etxtPassword"
        android:text="azerty123"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/R_etxtLogin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConnexion"
        android:id="@+id/R_btnConnexion"
        android:layout_below="@+id/R_etxtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp" />
</RelativeLayout>
