<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="inprespfm.application_bateaux.BoatArrived">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtviewId"
        android:id="@+id/R_txtvIdBateau"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="91dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtviewDestination"
        android:id="@+id/R_txtvDestination"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/R_etxtIdBateau"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignaler"
        android:id="@+id/R_btnSignaler"
        android:layout_marginTop="99dp"
        android:layout_below="@+id/R_etxtDestination"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/R_etxtIdBateau"
        android:layout_alignBaseline="@+id/R_txtvIdBateau"
        android:layout_alignBottom="@+id/R_txtvIdBateau"
        android:layout_toEndOf="@+id/R_txtvIdBateau"
        android:layout_marginStart="14dp"
        android:text="Titanic" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/R_etxtDestination"
        android:layout_alignBaseline="@+id/R_txtvDestination"
        android:layout_alignBottom="@+id/R_txtvDestination"
        android:layout_toEndOf="@+id/R_txtvDestination"
        android:text="iceberg" />
</RelativeLayout>
